<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <View
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_actionbar_background_view_height"
        android:background="@color/colorPrimaryDark"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="schirmer.nicolas.promessaescoteira.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetStart="0dp"
            style="@style/Toolbar">

            <ImageView
                android:contentDescription="@string/hamAc"
                android:id="@+id/content_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@drawable/ic_menu" />

            <TextView
                android:id="@+id/titleMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/whitePure"
                android:text="@string/titleMain"
                android:textSize="22sp" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/relativeRootMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/bg"
                android:scaleType="fitEnd"
                android:contentDescription="@string/bgAc"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="@dimen/img_main"
                        android:layout_height="@dimen/img_main"
                        android:scaleType="centerInside"
                        android:layout_weight="1"
                        android:contentDescription="@string/loboAc"
                        android:src="@drawable/lobo"
                        android:onClick="loboClick"
                        android:background="@color/transparent"
                        android:id="@+id/imageButton" />

                    <ImageButton
                        android:layout_width="@dimen/img_main"
                        android:layout_height="@dimen/img_main"
                        android:scaleType="centerInside"
                        android:layout_weight="1"
                        android:contentDescription="@string/escAc"
                        android:src="@drawable/esc"
                        android:onClick="escClick"
                        android:background="@color/transparent"
                        android:id="@+id/imageButton2" />
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="@dimen/img_main"
                        android:layout_height="@dimen/img_main"
                        android:scaleType="centerInside"
                        android:layout_weight="1"
                        android:contentDescription="@string/senAc"
                        android:src="@drawable/sen"
                        android:onClick="senClick"
                        android:background="@color/transparent"
                        android:id="@+id/imageButton3" />

                    <ImageButton
                        android:layout_width="@dimen/img_main"
                        android:layout_height="@dimen/img_main"
                        android:scaleType="centerInside"
                        android:layout_weight="1"
                        android:contentDescription="@string/pioAc"
                        android:src="@drawable/pio"
                        android:onClick="pioClick"
                        android:background="@color/transparent"
                        android:id="@+id/imageButton4" />
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="@dimen/img_main"
                        android:layout_height="@dimen/img_main"
                        android:scaleType="centerInside"
                        android:layout_weight="1"
                        android:contentDescription="@string/adAc"
                        android:src="@drawable/ad"
                        android:onClick="adClick"
                        android:background="@color/transparent"
                        android:id="@+id/imageButton5" />

                    <ImageButton
                        android:layout_width="@dimen/img_main"
                        android:layout_height="@dimen/img_main"
                        android:scaleType="centerInside"
                        android:layout_weight="1"
                        android:contentDescription="@string/uebAc"
                        android:src="@drawable/ueb"
                        android:onClick="uebClick"
                        android:background="@color/transparent"
                        android:id="@+id/imageButton6" />
                </TableRow>

            </TableLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
